--- a/frontend/simple/assets/sass/theme/index.scss
+++ b/frontend/simple/assets/sass/theme/index.scss
@@ -3,14 +3,21 @@ $gi-opacity-1: 0.75;
 $gi-opacity-2: 0.5;
 $gi-opacity-3: 0.25;
 
-$gi-spacer: 1rem; // same as gap but in rem
+$gi-spacer: 1rem; // same as Gulp $gap but using rem
 $gi-spacer-xl: $gi-spacer * 4;
 $gi-spacer-lg: $gi-spacer * 2;
 $gi-spacer-md: $gi-spacer;
 $gi-spacer-sm: $gi-spacer / 2;
 $gi-spacer-xs: $gi-spacer / 4;
 
-$gi-sidebarWidth: 15rem;
+$gi-sidebar-width: 15rem;
+
+// z-index constants
+// Why: https://css-tricks.com/handling-z-index/
+$gi-zindex-tooltip: 50;
+$gi-zindex-modal: 40;
+$gi-zindex-header: 30;
+// $gi-zindex-something: **; create when needed
 
 // TODO: Find a way to generated different import themes
 @import "kindergarten-professional";
